2009/12/09 (TS):
 - lanIpBasic.c:
     o BUGFIX - _udpSockSendTo_internal() would not send if driver
                provided NETDRV_SND_PACKET() and a buffer was passed.
     o update num_rbufs in config struct when new buffers are added
       so that reading the config struct always reflects the correct
       amount.
     o Added (many) statistics counters.
 - lanIpBasic.c, lanIpBasic.h:
	 o Added lanIpBscDumpIfStats(), lanIpBscDumpConfig().
 - Makefile.am: Added lanIpBasic.c to EXTRA_liblanIpBasic_mve_a_SOURCES.
 - drvAmdEthIpBasic.c:
     o clamp ring sizes to max defined by low-level driver (but not
       publicly known :-().
 - drvGnrIpBasic.c, drvLan9118IpBasic.c, e1k_lldrv.c, mve_lldrv.c,
   drvAmdEthIpBasic.c, gnreth_lldrv.h, lanIpBasic.c: 
     o New NETDRV entry points for retrieving driver name and for 
       dumping driver statistics.
2009/12/07 (TS):
 - Makefile.am, hash: Added 'lhtbl' from 'hash' CVS-module.
2009/12/07 (TS):
 - lanIpBasic.c, drvAmdEthIpBasic.c, drvGnrEthIpBasic.c, lanIpBasic.h:
   Added lanIpBscConfig() entry point for configuring certain stack
   parameters (request by S. Norum).
2009/12/07 (TS):
 - Makefile.am: unbundled udpComm, padProto etc. (see below) from lanIpBasic.
   Added support for building multiple lanIpBasic variants (multiple drivers)
   for a single BSP.
2009/12/07 (TS):
 - lanIpBasic.c: removed udpComm API (now an unbundled EPICS module in LCLS land).
2009/12/07 (TS):
 - e1k_lldrv.c: fixed compiler warnings (alloc_rxbuf() callback nowadays
   takes 'uintptr_t *' argument).
2009/12/06 (TS):
 - bpmsim.c, bpmsim.h, hostStream.c, hostStream.h, padProto.c, padProto.h,
   padProtoHost.c, padStream.c, padStream.h, sddsrd.c, sddsrd.h,
   udpCommBSD.c, udpComm.h: Unbundled and removed. These are now part
   of EPICS modules 'udpComm.till'.
2009/12/05 (TS):
 - BUGFIX: padStreamStart() would call udpSockHdrsInit() with a socket arg
   of (-1). This is invalid since the socket arg is needed to find